fixed spacing between inputs

--- a/sites/bizbash/server/styles/index.scss
+++ b/sites/bizbash/server/styles/index.scss
@@ -523,7 +523,7 @@ body {
 .directory-search {
   &__input {
     & ~ & {
-      margin-left: .75rem;
+      margin-left: .5rem;
     }
   }
 }
